samples/_failures_safe/1761623343_f40a30_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47ae7652.c: In function ‘main’:
./samples/SAFE/__tmp_47ae7652.c:131:20: error: ‘analy’ undeclared (first use in this function); did you mean ‘analyzer’?
  131 |     add_log_entry(&analy
      |                    ^~~~~
      |                    analyzer
./samples/SAFE/__tmp_47ae7652.c:131:20: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_47ae7652.c:131:25: error: expected ‘)’ at end of input
  131 |     add_log_entry(&analy
      |                  ~      ^
      |                         )
./samples/SAFE/__tmp_47ae7652.c:131:5: error: too few arguments to function ‘add_log_entry’
  131 |     add_log_entry(&analy
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_47ae7652.c:50:5: note: declared here
   50 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_47ae7652.c:131:5: error: expected declaration or statement at end of input
  131 |     add_log_entry(&analy
      |     ^~~~~~~~~~~~~
